# supermarket-price-compare

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: context.md  decisions.md  errors.md
.github/workflows/: ci.yml
scripts/: run_scrapers.sh  seed_data.py  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  constants.py  settings.py
src/database/: __init__.py  crud.py  db_manager.py  models.py
src/models/: __init__.py  price.py  product.py  shopping_list.py  supermarket.py
src/scrapers/: __init__.py  ah_api.py  albert_heijn.py  base_scraper.py  dirk.py  flink.py  jumbo.py  picnic.py  plus.py
src/services/: __init__.py  cost_calculator.py  mock_data.py  price_service.py  product_matcher.py  scraper_service.py  smart_search.py
src/ui/: streamlit_app.py
tests/: __init__.py  conftest.py
tests/e2e/: test_streamlit_app.py
tests/integration/: test_price_service.py
tests/unit/: test_cost_calculator.py  test_database.py  test_product_matcher.py
